Fixes alignment

--- a/app/stylesheets/main_page/community_resources.css.sass
+++ b/app/stylesheets/main_page/community_resources.css.sass
@@ -30,6 +30,7 @@
     h2.smaller
       font-size: 12px
       padding: 0
+      padding-top: 5px
       color: #1C2E40
       a
         text-decoration: none
